--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -54,8 +54,9 @@ main {
 }
 
 #df-status-webv {
-    width: 300px;
-    height: 440px;
+    width: fit-content;
+    height: 444px;
+    background-color: black;
 }
 
 button {
