--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -49,7 +49,7 @@ main {
     flex-direction: column;
     background-color: var(--bg-color);
     margin: auto;
-    padding: 20px 10px;
+    padding: 10px;
     border-radius: 10px;
 }
 
@@ -132,9 +132,9 @@ button {
 .config-menu {
     display: flex;
     flex-direction: column;
-    padding: 16px 12px;
-    height: 560px;
-    width: 520px;
+    padding: 8px 12px;
+    height: 550px;
+    width: 400px;
     margin: auto;
     background-color: var(--bg-color);
     border-radius: 10px;
@@ -162,7 +162,7 @@ button {
 
 .input-field>input {
     padding: 4px 8px;
-    width: auto;
+    width: 200px;
 }
 
 .input-field>button {
@@ -309,3 +309,21 @@ button {
 }
 
 /* ------------end compass-------------------- */
+
+header, footer{
+    display: flex;
+    flex-direction: column;
+    
+    background-color: black;
+}
+
+header{
+    border-right: 2px solid white;
+    width: 118px;
+    margin-right: 10px;
+}
+
+footer{
+    border-left: 2px solid white;
+    width: 94px;
+}
