--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -29,12 +29,27 @@ main {
     flex-grow: 1;
 }
 
+#spectrum-container{
+    display: none;
+    width: 100%;
+    position: relative;
+    z-index: 0;
+}
+
+.spectrum-view-overlay{
+    position: absolute;
+    background-color: rgba(255, 0, 0, 0);
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+}
+
 #spectrum-webv {
     width: 100%;
-    display: none;
     height: 100%;
     width: 100%;
 }
+
 
 #df-view {
     width: 100%;
@@ -49,6 +64,7 @@ main {
     flex-direction: column;
     background-color: var(--bg-color);
     margin: auto;
+    margin-left: 10px;
     padding: 10px;
     border-radius: 10px;
 }
@@ -60,7 +76,7 @@ main {
 
 .status-overlay{
     position: absolute;
-    background-color: rgba(255, 0, 0, 0.3);
+    background-color: rgba(255, 0, 0, 0);
     height: 100%;
     width: 100%;
     z-index: 2;
@@ -146,7 +162,7 @@ button {
 .config-menu {
     display: flex;
     flex-direction: column;
-    padding: 8px 12px;
+    padding: 8px 10px;
     height: 550px;
     width: 400px;
     margin: auto;
@@ -156,7 +172,7 @@ button {
 
 .config-menu>*:not(:last-child) {
     border: solid 2px var(--line-color);
-    padding: 8px;
+    padding: 8px 0;
     margin-bottom: 10px;
     border-radius: 10px;
 }
@@ -168,7 +184,7 @@ button {
 }
 
 .input-field>label {
-    width: 160px;
+    width: 128px;
     padding: 4px;
     margin-right: 4px;
     border: solid 2px var(--line-color);
@@ -176,7 +192,11 @@ button {
 
 .input-field>input {
     padding: 4px 8px;
-    width: 200px;
+    max-width: 190px;
+}
+
+.input-field>#input-freq {
+    width: 130px;
 }
 
 .input-field>button {
@@ -185,7 +205,9 @@ button {
 }
 
 .input-field>button:nth-child(2) {
-    margin-left: 4px;
+    margin-left: 0px;
+    margin-right: 32px;
+
 }
 
 /* --------------end-df-config---------------- */
@@ -213,8 +235,8 @@ button {
     text-align: center;
 }
 
-.df-system-control>button {
-    margin: 0 4px 4px auto;
+.df-system-control button {
+    margin: 10px auto;
 }
 
 /* ------------end system control--------- */
@@ -325,19 +347,25 @@ button {
 /* ------------end compass-------------------- */
 
 header, footer{
-    display: flex;
-    flex-direction: column;
-    
+    display: grid;
     background-color: black;
+    padding: 20px 0;
+    width: 118px;
 }
 
 header{
     border-right: 2px solid white;
-    width: 118px;
-    margin-right: 10px;
 }
 
 footer{
     border-left: 2px solid white;
-    width: 94px;
+    justify-items: right;
+}
+
+header button,
+footer button{
+    background-color: var(--bg-color);
+    color: white;
+    width: 110px;
+    height: 50px;
 }
