enable click on side button

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -93,6 +93,10 @@ button {
     cursor: pointer;
 }
 
+button:active{
+    background-color: red;
+}
+
 .config-menu button:focus,
 .config-menu input:focus,
 .config-menu select:focus {
